Fix invalid markdown, fix mobile nav z-index

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -130,6 +130,7 @@ blockquote {
 // Mobile burger menu
 .site-nav {
   top: 19px;
+  z-index: 999;
 }
 
 // Markdown page content
